kubectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $PROJECT-latest
  labels:
    app: $PROJECT
    version: latest
  namespace: dovepay-b2b
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: $PROJECT-latest
  template:
    metadata:
      labels:
        app: $PROJECT
        version: latest
        deployment: $PROJECT-latest
    spec:
      nodeSelector:
         node: slave
      hostAliases:
        - ip: 108.0.100.51
          hostnames:
            - "www.dovepay.com"
        - ip: 108.0.100.52
          hostnames:
            - "www.dovepay.com"
        - ip: 108.0.100.53
          hostnames:
            - "www.dovepay.com"
      containers:
        - name: $PROJECT
          image: $IMAGE_NAME
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: app-file
              mountPath: /epaynas
            - name: app-log
              mountPath: /opt/logs
      volumes:
        - name: app-file
          persistentVolumeClaim:
            claimName: $PROJECT-file
        - name: app-log
          persistentVolumeClaim:
            claimName: $PROJECT-log
---
kind: Service
apiVersion: v1
metadata:
  name: $PROJECT
  namespace: dovepay-b2b
  labels:
    app: $PROJECT
    service: $PROJECT
spec:
  ports:
    - name: http
      protocol: TCP # 协议
      port: 119  # Service端口
      targetPort: 3000 # 容器端口
      nodePort: 30039  # 对外暴露的端口，可以指定
  selector:
    app: $PROJECT
  type: NodePort
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: $PROJECT
  namespace: dovepay-b2b
  labels:
    app: $PROJECT
    service: $PROJECT
spec:
  rules:
    - host: app.$PROJECT.epay.k8s1.test
      http:
        paths:
          - path: /$PROJECT
            backend:
              serviceName: $PROJECT
              servicePort: 80
